@@ -95,6 +95,7 @@ TESTS = \
 	t/file-nodes.sh \
 	t/no-file.sh \
 	t/split.sh \
+	t/relative-path.sh \
 	t/dir.sh \
 	t/dir-file.sh \
 	t/dir-nondir.sh \
